# certio

./: .env  .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
auth/: auth_state.json
base/: data_fetcher.py  emission_source.py  merge.py
carbonjar/base/: data_fetcher.py
carbonjar/data/config/: generated_parameter_rules_FR.json  generated_parameter_rules_TN.json
carbonjar/sources/: agribalyse_ing.py  agribalyse_per_steps.py  base_carbone.py  climatiq_runner.py
carbonjar/sources/climatiq/: climatiq_dom_test.py
carbonjar/storage/: cnx.py  schema.sql
config/: airflow.cfg
dags/extract/: agribalyse_dag.py  climatiq_dag.py  test.py
dags/utils/: shared_operators.py  task_groups.py
data/: emission_factors.db
orchestrator/dags/: dag.py  extract.py
sources/: agribalyse.py  agribalyse_ing.py  agribalyse_per_steps.py  agribalyse_syn.py  climatiq.py
sources/climatiq/: climatiq_api_test.py  estimate.py  parameters_rules_generator.py  processing.py  save_session.py  search.py
storage/: storage.py
